# tokio-rust-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.debug.yml  docker-compose.yml
migrations/: 00001_initialized_database.sql
setup/: Cargo.toml
setup/src/: lib.rs
src/: configs.rs  dbs.rs  main.rs
