[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.0", features = ["full", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
num_cpus = "1.16.0"

setup = { path = "./setup" }
